2008-04-09  Øyvind Kolås  <pippin@o-hand.com>

	* README: removed bits about downloading box2d trunk and patching it.
	* box2d-build-and-install-shared.patch: removed.

2008-04-09  Øyvind Kolås  <pippin@o-hand.com>

	* configure.ac: replace hardcoded location of library with an in-place
	build.
	* Makefile.am: list all box2d cpp files as files that go into the
	clutter-box2d library.
	* box2d/: imported revision 140 from box2d svn directly into source
	tree.

2008-04-09  Øyvind Kolås  <pippin@o-hand.com>

	* clutter-box2d.h:
	* clutter-box2d.cpp: added prototypes and stubs for methods on
	clutter_box2d_actor: _set_linear_velocity, _get_linear_velocity
	_set_angular_velocity _get_angular_velocity _apply_force _apply_impulse
	_apply_torque _set_bullet _is_bullet.

2008-04-09  Øyvind Kolås  <pippin@o-hand.com>

	Improved cleanup when actors are unreferenced, bodies are now
	destroyed upon actor destruction.

	* clutter-box2d.cpp:
	* clutter-box2d.h:

2008-04-09  Øyvind Kolås  <pippin@o-hand.com>

	* clutter-box2d.cpp:
	* clutter-box2d.h: wrap b2MouseJoint functionality, allow changing
	the gravity of the simulation.

2008-04-09  Øyvind Kolås  <pippin@o-hand.com>

	* README: updated feature list/todo list.

2008-04-08  Øyvind Kolås  <pippin@o-hand.com>

	* README: augmented TODO list.
	* configure.ac: added AC_PROG_CXX

2008-04-08  Øyvind Kolås  <pippin@o-hand.com>

	* clutter-box2d.h: sketched out API for adding prismatic, distance,
	revolute and mouse joints.
	* clutter-box2d.cpp: added preliminiary implementation of prismatic,
	distance and revolute joints (will be refactored).

2008-04-04  Øyvind Kolås  <pippin@o-hand.com>

	* clutter-box2d.cpp: improved text.

2008-04-04  Øyvind Kolås  <pippin@o-hand.com>

	* clutter-box2d.cpp: Improved code structure and added some comments.
	* clutter-box2d.h: added some comments.

2008-04-04  Øyvind Kolås  <pippin@o-hand.com>

	* clutter-box2d.cpp: fixed criteria for synchronising the angle of the
	actor to the body.
